# yait

./: .gitignore  README.md  TESTING.md  pyproject.toml
docs/: DESIGN-v0.5.md  PRD.md
docs/brainstorm/: README.md  analysis-bugs.md  analysis-dx.md  analysis-features.md  audit-status.md  review-verdict.md
docs/design/: PRD-concurrency-lock.md  PRD-project-flag.md
docs/wip/: PRD-M1-mvp.md
src/yait/: board.py  cli.py  dashboard.py  git_ops.py  lock.py  models.py  store.py
src/yait/cli/: __init__.py  _helpers.py  board.py  bulk.py  config.py  dashboard.py  docs.py  io.py  issues.py  labels.py  links.py  milestone.py  project.py  search.py  template.py  update.py
tests/: conftest.py  test_board.py  test_cli.py  test_config.py  test_dashboard.py  test_doc_cli.py  test_doc_store.py  test_git_ops.py  test_links.py  test_links_cli.py  test_lock.py  test_models.py  test_output_format.py  test_project.py  test_security.py  test_status_cli.py  test_store.py
