[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yait"
version = "0.7.0"
description = "Yet Another Issue Tracker — markdown + git"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "pyyaml>=6.0"]

[project.scripts]
yait = "yait.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yait"]

[dependency-groups]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
